/**
* Generated by go-doudou v2.0.1.
* Don't edit!
*
* Version No.: v20221122
*/
syntax = "proto3";

package wordcloud_seg;
option go_package = "github.com/unionj-cloud/go-doudou-tutorials/wordcloud/wordcloud-seg/transport/grpc";

import "google/protobuf/any.proto";


message NestedAny {
  repeated google.protobuf.Any nestedAny = 1 [json_name="nestedAny"];
}

message SegPayload {
  // 文本
  string text = 1 [json_name="text"];
  // 文本语言
// 仅支持中文和英文
// text language
// only support zh and en
  string lang = 2 [json_name="lang"];
}

message SegResult {
  repeated NestedAny wordFreq = 1 [json_name="wordFreq"];
}

service WordcloudSegService {
  rpc SegRpc(SegPayload) returns (SegResult);
}
